-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0
-
None
-
-
5bcfc6a45 (dev), 73fce2237 (6.8)
"showEdgeLabels" (in the docs) or "edgeLabelsVisible" (in the source code) set to false does not work properly - first (bottom) label is rendered normally and the last one is rendered empty with no text.
Minimal reproducible example:
import QtQuick import QtGraphs Window { id: root width: 1280 height: 960 visible: true title: qsTr("Graphs 3D - Bar Graph") Bars3D { id: barGraph anchors.fill: parent valueAxis: Value3DAxis { formatter: LogValue3DAxisFormatter { edgeLabelsVisible: false } } Bar3DSeries { id: barSeries ItemModelBarDataProxy { itemModel: dataModel columnRole: "xPos" rowRole: "zPos" valueRole: "yPos" } } } ListModel { id: dataModel Component.onCompleted: { for (let i = -10; i <= 10; ++i) { for (let j = -10; j <= 10; ++j) { dataModel.append({"xPos": i, "yPos": (i + j), "zPos": j}) } } } } }
Property name mismatch reported under QTBUG-131131 report.