Fix edgeLabelsVisible property

Pick-to: 6.8
Fixes: QTBUG-131140
Change-Id: Ia750776d0f444beee17e74983b3f87c03ec06b28
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>