src/graphs3d/qml/qquickgraphsbars.cpp
@@ -2086,6 +2086,8 @@ void QQuickGraphsBars::updateSelectedBar()
                         updateItemLabel(m_selectedBarPos);
                         itemLabel()->setVisible(theme()->labelsVisible());
                         itemLabel()->setProperty("labelText", label);
+                        if (!label.compare(hiddenLabelTag))
+                            itemLabel()->setVisible(false);
                         if (isSliceEnabled())
                             updateSliceItemLabel(label, m_selectedBarPos);
                         break;
@@ -2156,6 +2158,8 @@ void QQuickGraphsBars::updateSliceItemLabel(const QString &label, QVector3D posi
     slicePos.setZ(.1f);
     sliceItemLabel()->setPosition(slicePos);
     sliceItemLabel()->setProperty("labelText", label);
+    if (!label.compare(hiddenLabelTag))
+        sliceItemLabel()->setVisible(false);
     sliceItemLabel()->setEulerRotation(QVector3D(0.0f, 0.0f, 90.0f));
     sliceItemLabel()->setVisible(theme()->labelsVisible());
 }
@@ -2445,6 +2449,8 @@ void QQuickGraphsBars::createBarItemHolders(QBar3DSeries *series,
             updateItemLabel(m_selectedBarPos);
             itemLabel()->setVisible(theme()->labelsVisible());
             itemLabel()->setProperty("labelText", label);
+            if (!label.compare(hiddenLabelTag))
+                itemLabel()->setVisible(false);
             if (isSliceEnabled())
                 updateSliceItemLabel(label, m_selectedBarPos);
             break;
