src/graphs3d/qml/qquickgraphsscatter.cpp
@@ -1839,6 +1839,8 @@ void QQuickGraphsScatter::updateGraph()
             updateItemLabel(selectionPosition);
             QString label = m_selectedItemSeries->itemLabel();
             itemLabel()->setProperty("labelText", label);
+            if (!label.compare(hiddenLabelTag))
+                itemLabel()->setVisible(false);
         }
     }
 
@@ -1872,6 +1874,8 @@ void QQuickGraphsScatter::synchData()
         if (m_selectedItem != invalidSelectionIndex()) {
             QString itemLabelText = m_selectedItemSeries->itemLabel();
             itemLabel()->setProperty("labelText", itemLabelText);
+            if (!itemLabelText.compare(hiddenLabelTag))
+                itemLabel()->setVisible(false);
         }
         setSelectedItemChanged(false);
     }
